--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn src/index.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "start:prod": "node build/server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "AlexNicolasCode",
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.3.0",
     "graphql": "^15.5.3",
-    "mongoose": "^6.0.6"
+    "mongoose": "^6.0.6",
+    "tsc": "^2.0.3",
+    "typescript": "^4.4.3"
   },
   "devDependencies": {
     "ts-node-dev": "^1.1.8"
