--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "bookue-api",
   "version": "1.0.0",
-  "engines": {
-    "yarn": "1.x"
+  "description": "",
+  "main": "build/src/index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "build": "tsc && node build/src/index.js"
   },
+  "author": "AlexNicolasCode",
+  "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.3.0",
     "graphql": "^15.5.3",
@@ -11,4 +17,7 @@
     "tsc": "^2.0.3",
     "typescript": "^4.4.3"
   },
+  "devDependencies": {
+    "ts-node-dev": "^1.1.8"
+  }
 }
