--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "AlexNicolasCode",
   "license": "ISC",
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.5",
     "apollo-server": "^3.3.0",
+    "crypto": "^1.0.1",
     "graphql": "^15.5.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.6",
     "tsc": "^2.0.3",
     "typescript": "^4.4.3"
