fix: build must be made in heroku

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "skipLibCheck": true,
-    "outDir": "build/",
+    "outDir": "build",
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "./env.ts"]
