--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   "dependencies": {
     "apollo-server": "^3.3.0",
     "crypto": "^1.0.1",
+    "dotenv": "^10.0.0",
     "graphql": "^15.5.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.6",
+    "mongoose": "^6.0.6"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^8.5.5",
-    "tsc": "^2.0.3",
     "typescript": "^4.4.3",
+    "tsc": "^2.0.3",
+    "@types/jsonwebtoken": "^8.5.5",
     "ts-node-dev": "^1.1.8"
   }
 }
