--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v2
       - name: build
-        run: npm run build
+        run: yarn build
