--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: get modules
+        run: yarn
+      
       - name: build
         run: yarn build
