chore: initial jest setup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,10 @@
     "strictNullChecks": false,
     "noImplicitAny": false,
     "paths": {
+      "@/tests/*": ["../tests/*"],
       "@/*": ["src/*"]
     }
   },
-  "include": ["src/**/*"],
+  "include": ["src", "tests"],
   "exclude": ["node_modules", "./env.ts"],
 }
