--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "build/src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --passWithNoTests --runInBand --no-cache --watch -c jest.unit.config.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc"
   },
@@ -19,9 +19,12 @@
     "mongoose": "^6.0.6"
   },
   "devDependencies": {
-    "typescript": "^4.4.3",
-    "tsc": "^2.0.3",
+    "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.5",
-    "ts-node-dev": "^1.1.8"
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.4",
+    "ts-node-dev": "^1.1.8",
+    "tsc": "^2.0.3",
+    "typescript": "^4.4.3"
   }
 }
