--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.0.6"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.1.2",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.5",
     "jest": "^27.5.1",
