--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.3.0",
+    "apollo-server-express": "^3.6.7",
     "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "graphql": "^15.5.3",
