--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.5",
     "jest": "^27.5.1",
+    "mockdate": "^3.0.5",
     "ts-jest": "^27.1.4",
     "ts-node-dev": "^1.1.8",
     "tsc": "^2.0.3",
