--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apollo-server-express": "^3.6.7",
     "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
+    "express": "^4.17.3",
     "graphql": "^15.5.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.6"
