--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "build/src/index.js",
   "scripts": {
     "test": "jest --passWithNoTests --runInBand --no-cache --watch -c jest.unit.config.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register src/main/server.ts",
+    "start": "node dist/src/main/server.js",
     "build": "tsc"
   },
   "author": "AlexNicolasCode",
@@ -29,6 +30,7 @@
     "ts-jest": "^27.1.4",
     "ts-node-dev": "^1.1.8",
     "tsc": "^2.0.3",
+    "tsconfig-paths": "^3.14.1",
     "typescript": "^4.4.3"
   }
 }
