--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "apollo-server": "^3.3.0",
     "apollo-server-express": "^3.6.7",
+    "bcrypt": "^5.0.1",
     "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.3",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^6.1.2",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.5",
     "jest": "^27.5.1",
