--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.17.3",
     "graphql": "^15.5.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.6"
+    "mongoose": "^6.0.6",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^6.1.2",
