--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "build/src/index.js",
   "scripts": {
     "test": "jest --passWithNoTests --runInBand --no-cache --watch -c jest.unit.config.js",
-    "dev": "ts-node-dev -r tsconfig-paths/register src/main/server.ts",
+    "test:cov": "jest --coverage",
     "start": "node dist/src/main/server.js",
+    "start:dev": "ts-node-dev -r tsconfig-paths/register src/main/server.ts",
     "build": "tsc",
     "mongo:up": "docker-compose up -d",
     "mongo:stop": "docker-compose stop"
