--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "build/src/index.js",
   "scripts": {
     "test": "jest --passWithNoTests --runInBand --no-cache --watch -c jest.unit.config.js",
-    "test:cov": "npm test --coverage",
+    "test:cov": "jest --coverage",
     "start": "node dist/src/main/server.js",
     "start:dev": "ts-node-dev -r tsconfig-paths/register src/main/server.ts",
     "build": "tsc",
