--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
     "skipLibCheck": true,
-    "outDir": "./dist",
     "baseUrl": "./",
-    "strictNullChecks": false,
-    "noImplicitAny": false,
+    "outDir": "dist",
+    "module": "commonjs",
+    "target": "es2019",
+    "esModuleInterop": true,
+    "sourceMap": true,
     "paths": {
       "@/tests/*": ["../tests/*"],
       "@/*": ["src/*"]
