--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "build/src/index.js",
   "scripts": {
-    "test": "jest --passWithNoTests --runInBand --no-cache --watch -c jest.unit.config.js",
-    "test:cov": "jest --coverage",
+    "test": "jest --passWithNoTests --runInBand --no-cache",
+    "test:unit": "npm test -- --watch -c jest.unit.config.js",
+    "test:ci": "npm test -- --coverage",
+    "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
     "start": "node dist/src/main/server.js",
     "start:dev": "ts-node-dev -r tsconfig-paths/register src/main/server.ts",
     "build": "tsc",
@@ -28,9 +30,11 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^6.1.2",
+    "@shelf/jest-mongodb": "^3.0.1",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.5",
+    "coveralls": "^3.1.1",
     "jest": "^27.5.1",
     "mockdate": "^3.0.5",
     "ts-jest": "^27.1.4",
