--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test:ci": "npm test -- --coverage",
     "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
     "start": "node dist/src/main/server.js",
-    "start:dev": "ts-node-dev -r tsconfig-paths/register src/main/server.ts",
+    "start:dev": "ts-node -r tsconfig-paths/register src/main/server.ts",
     "build": "tsc",
     "mongo:up": "docker-compose up -d",
     "mongo:stop": "docker-compose stop"
@@ -29,7 +29,7 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^6.1.2",
+    "@faker-js/faker": "^7.4.0",
     "@shelf/jest-mongodb": "^3.0.1",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.4.1",
@@ -38,7 +38,7 @@
     "jest": "^27.5.1",
     "mockdate": "^3.0.5",
     "ts-jest": "^27.1.4",
-    "ts-node-dev": "^1.1.8",
+    "ts-node": "^10.9.1",
     "tsc": "^2.0.3",
     "tsconfig-paths": "^3.14.1",
     "typescript": "^4.4.3"
