--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,11 @@
     "module": "commonjs",
     "target": "es2019",
     "esModuleInterop": true,
-    "sourceMap": true,
     "paths": {
       "@/tests/*": ["../tests/*"],
       "@/*": ["src/*"]
     }
   },
   "include": ["src", "tests"],
-  "exclude": ["node_modules", "src/env.ts"],
+  "exclude": ["node_modules", "src/env.ts", "tests"],
 }
