--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:unit": "npm test -- --watch -c jest.unit.config.js",
     "test:ci": "npm test -- --coverage",
     "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
-    "start": "node dist/src/main/server.js",
+    "start": "node dist/main/server.js",
     "start:dev": "ts-node -r tsconfig-paths/register src/main/server.ts",
     "build": "tsc",
     "mongo:up": "docker-compose up -d",
