--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "apollo-server": "^3.3.0",
     "apollo-server-express": "^3.6.7",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.3",
