--- a/.github/workflows/unitary-tests.yml
+++ b/.github/workflows/unitary-tests.yml
@@ -9,16 +9,17 @@ on:
 stages:
   - test
 
-test:
-  image: node:14.17.6-alpine3.14
-  stage: test
-  cache:
-    - key:
-        files:
-          - yarn.lock
-      paths:
-        - node_modules/
-  before_script:
-    - yarn install
-  script:
-    - yarn test:ci
+jobs:
+  test:
+    image: node:14.17.6-alpine3.14
+    stage: test
+    cache:
+      - key:
+          files:
+            - yarn.lock
+        paths:
+          - node_modules/
+    before_script:
+      - yarn install
+    script:
+      - yarn test:ci
