--- a/.github/workflows/unitary-tests.yml
+++ b/.github/workflows/unitary-tests.yml
@@ -22,5 +22,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: src/yarn.lock
     - run: npm install
     - run: npm run test:ci
