feat: cache node_modules

--- a/.github/workflows/unitary-tests.yml
+++ b/.github/workflows/unitary-tests.yml
@@ -16,7 +16,6 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 18
-        cache: 'npm'
-        cache-dependency-path: src/yarn.lock
+        cache: 'npm', 'node_modules'
     - run: npm install
     - run: npm run test:ci
