--- a/.github/workflows/unitary-tests.yml
+++ b/.github/workflows/unitary-tests.yml
@@ -16,6 +16,6 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 18
-        cache: 'npm', 'node_modules'
+        cache: 'npm'
     - run: npm install
     - run: npm run test:ci
