--- a/.github/workflows/unitary-tests.yml
+++ b/.github/workflows/unitary-tests.yml
@@ -11,11 +11,16 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [18.x]
+
     steps:
     - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
-        node-version: 18
+        node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm install
     - run: npm run test:ci
