--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/jsonwebtoken": "^8.5.5",
     "coveralls": "^3.1.1",
     "jest": "^27.5.1",
+    "jest-environment-node": "^27.5.0",
     "mockdate": "^3.0.5",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.9.1",
