--- a/.github/workflows/unitary-tests.yml
+++ b/.github/workflows/unitary-tests.yml
@@ -15,10 +15,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
+
+    - uses: actions/cache@v2
       with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm install
-    - run: npm run test:ci
+        path: '**/node_modules'
+        key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+
+    - name: Install packages
+      run: yarn install
+
+    - name: Run tests
+    - run: yarn test:ci
