--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 version: "3.9"
 services:
-  web:
-    build: .
+  mongodb:
+    container_name: mongodb
+    image: mongo
+    volumes:
+      - ~/mongo:/data/db
     ports:
-      - "8000:8000"
+      - "27017:27017"
