--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.5",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
     "coveralls": "^3.1.1",
+    "eslint": "^8.45.0",
     "jest": "^27.5.1",
     "jest-environment-node": "^27.5.0",
     "mockdate": "^3.0.5",
