--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "outDir": "dist",
     "module": "commonjs",
     "target": "es2019",
+    "noUnusedLocals": true,
     "esModuleInterop": true,
+    "noImplicitAny": false,
     "paths": {
       "@/tests/*": ["../tests/*"],
       "@/*": ["src/*"]
