chore: add lin and lint and fix shortcuts

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
     "start": "node dist/main/server.js",
     "start:dev": "ts-node -r tsconfig-paths/register src/main/server.ts",
-    "build": "tsc --build tsconfig-build.json"
+    "build": "tsc --build tsconfig-build.json",
+    "lint": "eslint . --ext .ts",
+    "lint-and-fix": "eslint . --ext .ts --fix"
   },
   "author": "AlexNicolasCode",
   "license": "ISC",
