--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.7",
+    "@commitlint/config-conventional": "^17.6.7",
     "@faker-js/faker": "^7.4.0",
     "@shelf/jest-mongodb": "^3.0.1",
     "@types/bcrypt": "^5.0.0",
